fix: adjust dao and home page gap

--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -45,10 +45,6 @@
     --chart-5: 27 87% 67%;
   }
 
-  .link-tangerine {
-    @apply font-mono tracking-wider text-tangerine hover:text-tangerine/80;
-  }
-
   .dark {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
@@ -124,7 +120,8 @@
     @apply gap-4 sm:gap-6;
   }
 
-  .page-sections-gap {
-    @apply  sm:gap-3;
+
+  .link-tangerine {
+    @apply font-mono tracking-wider text-tangerine hover:text-tangerine/80;
   }
 }
